# dexrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: simple_reading.rs
src/: lib.rs  reading.rs  trends.rs
src/dexcom/: client.rs  consts.rs  error.rs  glucose.rs  mod.rs  request.rs  sessions.rs
